# AudioFlow

./: .gitattributes  .gitignore  Amplifier.cpp  Amplifier.h  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  Equalizer.cpp  Equalizer.h  IIRFilter.cpp  IIRFilter.h  audioProcessor.h  config.json  main.cpp  next.txt  readme.md
assets/driver/BlackHole.driver/Contents/: Info.plist
assets/driver/BlackHole.driver/Contents/MacOS/: BlackHole
assets/driver/BlackHole.driver/Contents/_CodeSignature/: CodeResources
assets/eq/: bass +.json  bass -.json  flat.json  treble +.json  treble -.json  vocal +.json  vocal -.json
assets/icon/: AudioFlow.icns
fileutils/: config.cpp  config.h  globals.cpp  globals.h  readIRFile.cpp  readIRFile.h
processing/: Amplifier.cpp  Amplifier.h  AudioProcessor.cpp  AudioProcessor.h  Equalizer.cpp  Equalizer.h  IIRFilter.cpp  amplifier.cpp  amplifier.h  audioProcessor.cpp  audioProcessor.h  convolutionReverb.cpp  convolutionReverb.h  equalizer.cpp  equalizer.h  iirFilter.cpp  iirFilter.h  interpolation.cpp  interpolation.h  smoother.cpp  smoother.h
scripts/: installer.sh  uninstaller.sh
src/: audioProcessor.cpp  audioProcessor.h  main.cpp  processing.cpp  processing.h
ui/: package.json
ui/src/: index.html  main.js  preload.js  renderer.js
ui/src/styles/: input.css  output.css
